
2016-09-01  Edward Hart <edward.dan.hart@gmail.com>

	* field.c (validate_field_1), parser.y (sign_clause): fixed bug #305 by
	  adding checks that elementary item with SIGN has S in PIC and is USAGE
	  DISPLAY or NATIONAL.

2016-08-31  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c (cobc_check_valid_name): refactored to take enum parameters
	  instead of magic numbers.
	* parser.y (print_bits): improved style.
	* tree.c (cb_build_picture): added warning message to PIC N.

2016-08-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: added hint to change dialect if a known system device
	  is used which is not reserved in current dialect

2016-08-25  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, scanner.l, tree.h: fixed bug #305, where the
	  error_stmt_recover token was consumed when it was needed to resume
	  normal parsing.

2016-08-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_interal_function): deactivated storing module call
	  parameters after module entry
	* codegen.c: generating a local cob_call_params and using it for all
	  parameter checks
	* codegen.c (output_entry_function): don't generate a call to
	  cob_get_global_ptr() without checking that the runtime is initialized

2016-08-20  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (identifier): added check that identifier references a field.
	* parser.y: added checks that INSPECT and TRANSFORM have USAGE DISPLAY
	  operands.
	* parser.y, scanner.l: split class-names into separate token from WORD,
	  as they can only be referenced in class conditions.
	* scanner.l: improved style.
	* typeck.c: refactored checking of INSPECT/TRANSFORM targets.

2016-08-16  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (emit_screen_displays): fixed bug introduced in the previous
	  commit where invalid MOVEs were generated (see discussion [eed1ec4a]).

2016-08-15  Edward Hart <edward.dan.hart@gmail.com>
